c/r-html-reports: Add instance limit for tags template
This reduces the size of the generated website by about 20% (220MB on
lindsay.d.o).  In some cases, it will probably also make a huge
difference in page load speed as we no longer have 10+ MB html pages
for tags.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/reporting/templates/tag.tmpl
+++ b/reporting/templates/tag.tmpl
@@ -3,10 +3,28 @@
   head("Lintian Tag: ${q_tag}") }
   <h1><span class="type-{$code}">{$code}</span> {${q_tag}}</h1>
 
+{ if ($statistics{total} <= $shown_count) {
+  $OUT .= qq(
   <p>
-    All reports of {$tag} for the archive. The extended description of this
+    All reports of ${tag} for the archive. The extended description of this
     tag is:
   </p>
+);
+  } else {
+  $OUT .= qq(
+    <p>
+      A subset of the reports of ${tag} for the archive.  Unfortunately the full
+      list is too long, so only ${shown_count} instances are listed on this page.
+      At most ${tag_limit_per_package} tags are shown per package.
+      <a href="{resource_path('lintian.log.gz')}">If you need the full list of tags,
+       please download the lintian.log.gz file and extract the data you need.</a>
+    </p>
+    <p>
+      The extended description of this tag is:
+    </p>
+  );
+  }
+}
 
   <blockquote class="type-{$code}">
 {$description}
