r/t/tag.tmpl: Fix link to lintian.log
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/reporting/templates/tag.tmpl
+++ b/reporting/templates/tag.tmpl
@@ -11,12 +11,13 @@
   </p>
 );
   } else {
+  my $log_link = resource_path('lintian.log.gz');
   $OUT .= qq(
     <p>
       A subset of the reports of ${tag} for the archive.  Unfortunately the full
       list is too long, so only ${shown_count} instances are listed on this page.
       At most ${tag_limit_per_package} tags are shown per package.
-      <a href="{resource_path('lintian.log.gz')}">If you need the full list of tags,
+      <a href="${log_link}">If you need the full list of tags,
        please download the lintian.log.gz file and extract the data you need.</a>
     </p>
     <p>
