c/r-html-reports: Show number of groups with processing errors
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/reporting/templates/index.tmpl
+++ b/reporting/templates/index.tmpl
@@ -76,6 +76,7 @@
       <tr><td>Maintainers:</td>      <td>{$delta{maintainers}}</td></tr>
       <tr><td>Package groups:</td>     <td>{$delta{'groups-known'}}</td></tr>
       <tr><td>Rescheduled groups:</td> <td>{$delta{'groups-backlog'}}</td></tr>
+      <tr><td>Groups with processing errors:</td> <td>{$delta{'groups-with-errors'}}</td></tr>
       <tr><td>Source packages:</td>  <td>{$delta{'source-packages'}}</td></tr>
       <tr><td>Binary packages:</td>  <td>{$delta{'binary-packages'}}</td></tr>
       <tr><td>&mu;deb packages:</td> <td>{$delta{'udeb-packages'}}</td></tr>
