r/t/maintainer.tmpl: Add a distinct status for incomplete reports
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/reporting/templates/lintian.css.tmpl
+++ b/reporting/templates/lintian.css.tmpl
@@ -378,6 +378,10 @@ li.type-O {
     color: #444;
 }
 
+b.processing-error {
+    color: #FF6700;
+}
+
 blockquote {
     padding: 6px 16px;
     background-color: #EEE;
