--- a/reporting/templates/maintainer.tmpl
+++ b/reporting/templates/maintainer.tmpl
@@ -109,7 +109,7 @@
                     my $last_processed_by = $state->{'last-processed-by'} // 'N/A';
                     $status = '<i>outdated</i>' if (exists($state->{'out-of-date'}));
                     $status = '<b class="processing-error">incomplete report; an error occurred during the last check</b>'
-                      if exists($state->{'processing-errors'}) and $state->{'processing-errors'};
+                      if exists($state->{'last-error-by'}) and $state->{'last-error-by'};
                     $OUT .= qq(  <div class="source-header">\n);
                     $OUT .= qq(   <h2 id="$pkg_info->{anchor}">);
                     $OUT .= "$source ($version$component)";
