--- a/reporting/templates/maintainer.tmpl
+++ b/reporting/templates/maintainer.tmpl
@@ -124,6 +124,7 @@
                     $OUT .= qq(    <a href="https://packages.debian.org/src:$source">Info</a>\n);
                     $OUT .= qq(    <a href="https://tracker.debian.org/$source">Package Tracker</a>\n);
                     $OUT .= qq(    <a href="https://bugs.debian.org/src:$source">Bugs</a>\n);
+                    $OUT .= qq(    <a href="https://sources.debian.org/src/$source/$version">Source</a>\n);
                     if ($errors) {
                         $OUT .= qq(    <a href="${path_prefix}full/$id#$anchor">Full report</a>\n);
                     } elsif (@error_tags) {
