--- a/reporting/templates/tag.tmpl
+++ b/reporting/templates/tag.tmpl
@@ -64,7 +64,7 @@
             if ($last) {
                 my $overridden = $has_nonoverridden ? '' : qq{ <span class="type-O">overridden</span>};
                 $OUT .= qq(  <h2 class="tag"><a href="${path_prefix}full/$last->{pkg_info}{xref}">);
-                $OUT .= "$last_pi->{package} $last_pi->{version}</a> ($last_pi->{type})$overridden</h2>\n";
+                $OUT .= "$last_pi->{package} $last_pi->{version}</a> ($last_pi->{type}) (<em>$last_pi->{maintainer}</em>)$overridden</em></h2>\n";
                 if ($tag) {
                     $OUT .= qq(  <ul class="tag">\n);
                     $OUT .= $tag;
@@ -87,7 +87,7 @@
     }
     my $overridden = $has_nonoverridden ? '' : qq{ <span class="type-O">overridden</span>};
     $OUT .= qq(  <h2 class="tag"><a href="${path_prefix}full/$last->{pkg_info}{xref}">);
-    $OUT .= "$last_pi->{package} $last_pi->{version}</a> ($last_pi->{type})$overridden</h2>\n";
+    $OUT .= "$last_pi->{package} $last_pi->{version}</a> ($last_pi->{type}) (<em>$last_pi->{maintainer}</em>)$overridden</h2>\n";
     if ($tag) {
         $OUT .= qq(  <ul class="tag">\n);
         $OUT .= $tag;
