Tidy architecture grouping code by avoiding unnecessary refref.
<Grinnz> multi-dimensional data structures are just data structures
         with refs to other data structures. those refs can already
         be copied around however you want, you don't need to take a
         ref to them.

Gbp-Dch: Ignore

--- a/reporting/templates/maintainer.tmpl
+++ b/reporting/templates/maintainer.tmpl
@@ -179,8 +179,7 @@
                         $OUT .= qq(      <ul class="extra">);
                     }
                     $OUT .= "<li>$info->{extra}";
-                    my $archsref = $info->{archs};
-                    my @archs = sort keys %{$$archsref};
+                    my @archs = sort keys %{ $info->{archs} };
                     $OUT .= " <tt>[" . join(', ', @archs) . "]</tt>" if @archs > 1;
                     $OUT .= "</li>";
                 }
