Use Severity field in tags to determine their display prominence directly. (Closes: #935706)
After a discussion in Bug#935706, the old mechanism between tag severity and
tag certainty that determined the warning level was abandoned.

The prominence a tag is given during output is now determined directly by
the field Severity. The value can be one of 'error', 'warning', 'info',
'pedantic' or 'classification'.

The new values correspond directly to the familiar levels, and are often
requested in bug reports.

The old concept of tag certainty no longer exists in Lintian.

--- a/reporting/templates/index.tmpl
+++ b/reporting/templates/index.tmpl
@@ -34,7 +34,7 @@
     <ul>
       <li><a href="{$path_prefix}maintainers.html">Index of Lintian reports per package maintainers</a></li>
       <li><a href="{$path_prefix}tags.html">List of emitted tags sorted alphabetically</a></li>
-      <li><a href="{$path_prefix}tags-severity.html">List of emitted tags grouped by severity and certainty</a></li>
+      <li><a href="{$path_prefix}tags-severity.html">List of emitted tags grouped by severity</a></li>
       <li><a href="{$path_prefix}tags-all.html">List of all tags sorted alphabetically</a></li>
       <li>Lists of packages that have names starting with:
         <ul>
